--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "@types/nodemailer": "^6.4.15",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.1",
@@ -59,6 +61,7 @@
     "dayjs": "^1.11.10",
     "framer-motion": "^12.23.12",
     "input-otp": "^1.2.4",
+    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.334.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^16.0.10",
